crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__progress_centered_fill.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="16" viewBox="0 0 100 16">
<rect width="100" height="16" fill="#E0E0E0" rx="4"/>
<rect x="0" y="4" width="60" height="8" fill="#2196F3" rx="4"/>
</svg>
