crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__slider_with_track_border.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="16" viewBox="0 0 120 16">
<rect x="0" y="4" width="120" height="8" fill="#F5F5F5" rx="3" stroke="#BDBDBD" stroke-width="1"/>
  <rect x="0" y="4" width="60" height="8" fill="#3F51B5" rx="3"/>
<ellipse cx="60" cy="8" rx="8.0" ry="8.0" fill="#3F51B5"/>
</svg>
